--- a/custom.css
+++ b/custom.css
@@ -9,13 +9,16 @@ h2 {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 2rem;
 }
+h3 {
+  text-align: center;
+}
 p {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.3rem;
 }
-#about {
+/* #about {
   background: linear-gradient(#93cbf1, #87f4b5);
-}
+} */
 #skills {
   background: linear-gradient(#87f4b5, #93cbf1);
 }
