--- a/custom.css
+++ b/custom.css
@@ -1,3 +1,12 @@
+.hero {
+  overflow-x: hidden;
+}
+.about {
+  overflow-x: hidden;
+}
+.container {
+  overflow-x: hidden;
+}
 .navbar {
   background: #0f0f0f;
   box-shadow: 0 1px 0 #ffffff;
