--- a/custom.css
+++ b/custom.css
@@ -1,6 +1,7 @@
 .hero {
   overflow-x: hidden;
 }
+
 .about {
   overflow-x: hidden;
 }
@@ -31,6 +32,7 @@ h5.review-stat {
 }
 
 p {
+  margin-top: 2rem;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.3rem;
 }
